desktop-themes/ContrastHigh/gtk-3.0/gtk-widgets.css
/* ... */
    notebook tab:hover {
      border-color: #7f7f7f; }
    notebook tab:checked, notebook tab:backdrop:checked {
      border-color: #000; }
    notebook tab:backdrop {
      background-color: transparent;
      border-color: transparent; }
    .top notebook tab.reorderable-page {
      border-color: transparent; }
      .top notebook tab.reorderable-page:hover {
        border-color: rgba(127, 127, 127, 0.3);
        border-bottom-color: #7f7f7f;
        background-color: rgba(255, 255, 255, 0.2); }
      .top notebook tab.reorderable-page:checked {
        background-color: rgba(255, 255, 255, 0.5);
        border-color: rgba(127, 127, 127, 0.5);
        border-bottom-color: #000; }
        .top notebook tab.reorderable-page:checked:hover {
          background-color: rgba(255, 255, 255, 0.7); }
        .top notebook tab.reorderable-page:checked:backdrop {
          border-color: #8b8b8b;
          background-color: #fff;
          border-bottom-color: #000; }
      .top notebook tab.reorderable-page:backdrop {
        border-color: transparent;
        background-color: transparent; }
    .bottom notebook tab.reorderable-page {
      border-color: transparent; }
      .bottom notebook tab.reorderable-page:hover {
        border-color: rgba(127, 127, 127, 0.3);
        border-top-color: #7f7f7f;
        background-color: rgba(255, 255, 255, 0.2); }
      .bottom notebook tab.reorderable-page:checked {
        background-color: rgba(255, 255, 255, 0.5);
        border-color: rgba(127, 127, 127, 0.5);
        border-top-color: #000; }
        .bottom notebook tab.reorderable-page:checked:hover {
          background-color: rgba(255, 255, 255, 0.7); }
        .bottom notebook tab.reorderable-page:checked:backdrop {
          border-color: #8b8b8b;
          background-color: #fff;
          border-top-color: #000; }
      .bottom notebook tab.reorderable-page:backdrop {
        border-color: transparent;
        background-color: transparent; }
    .left notebook tab.reorderable-page {
      border-color: transparent; }
      .left notebook tab.reorderable-page:hover {
        border-color: rgba(127, 127, 127, 0.3);
        border-right-color: #7f7f7f;
        background-color: rgba(255, 255, 255, 0.2); }
      .left notebook tab.reorderable-page:checked {
        background-color: rgba(255, 255, 255, 0.5);
        border-color: rgba(127, 127, 127, 0.5);
        border-right-color: #000; }
        .left notebook tab.reorderable-page:checked:hover {
          background-color: rgba(255, 255, 255, 0.7); }
        .left notebook tab.reorderable-page:checked:backdrop {
          border-color: #8b8b8b;
          background-color: #fff;
          border-right-color: #000; }
      .left notebook tab.reorderable-page:backdrop {
        border-color: transparent;
        background-color: transparent; }
    .right notebook tab.reorderable-page {
      border-color: transparent; }
      .right notebook tab.reorderable-page:hover {
        border-color: rgba(127, 127, 127, 0.3);
        border-left-color: #7f7f7f;
        background-color: rgba(255, 255, 255, 0.2); }
      .right notebook tab.reorderable-page:checked {
        background-color: rgba(255, 255, 255, 0.5);
        border-color: rgba(127, 127, 127, 0.5);
        border-left-color: #000; }
        .right notebook tab.reorderable-page:checked:hover {
          background-color: rgba(255, 255, 255, 0.7); }
        .right notebook tab.reorderable-page:checked:backdrop {
          border-color: #8b8b8b;
          background-color: #fff;
          border-left-color: #000; }
      .right notebook tab.reorderable-page:backdrop {
        border-color: transparent;
        background-color: transparent; }
    notebook tab label {
      padding: 0 2px;
      font-weight: bold;
      color: #7f7f7f;
      /* color: inherit doesn't work here */ }
      notebook tab label:backdrop {
        color: #7f7f7f; }
    notebook tab:hover label {
      color: #3f3f3f; }
    notebook tab:checked label {
      color: #000; }
      notebook tab:checked label:backdrop {
        color: #000; }
    notebook tab button {
      border: 2px solid transparent;
      -gtk-icon-shadow: none;
      transition: none;
      color: rgba(0, 0, 0, 0.3); }
      notebook tab button:hover {
        color: #000;
        border-width: 2px;
        border-style: solid;
        color: #000;
        background-color: #fff;
        border-color: #7f7f7f;
        background-image: none;
        border-width: 2px;
        background-image: none;
        box-shadow: none; }
      notebook tab button:checked {
        border-width: 2px;
        border-style: solid;
        background-image: none;
        color: white;
        background-color: black;
        border-color: #7f7f7f;
        border-width: 2px; }
      notebook tab button:backdrop, notebook tab button:backdrop:hover {
        color: rgba(0, 0, 0, 0.3);
        border-color: transparent;
        border-width: 2px; }
      notebook tab button > image {
        padding: 2px; }

/**************
 * Scrollbars *
 **************/
scrollbar {
  background-clip: padding-box;
  background-image: none;
  border-style: solid;
  -GtkScrollbar-has-backward-stepper: false;
  -GtkScrollbar-has-forward-stepper: false;
  -GtkRange-slider-width: 20;
  -GtkScrollbar-min-slider-length: 42; }
  scrollbar button {
    border: none; }
  scrollbar slider {
    border-radius: 20px;
    border: 5px solid transparent;
    background-color: #7f7f7f; }
    scrollbar slider:backdrop, scrollbar slider:disabled {
      background-color: #e5e5e5; }
    scrollbar slider:hover {
      background-color: #4c4c4c; }
    scrollbar slider:hover:active {
      background-color: #000; }
    scrollbar slider.fine-tune {
      border-width: 8px; }
      scrollbar slider.fine-tune:hover:active {
        background-color: #000; }
  scrollbar.overlay-indicator:not(.dragging):not(.hovering) {
    opacity: 0.4;
    -GtkRange-slider-width: 5px; }
/* ... */

